# coinsight

./: .gitignore  README.md  start.bat  start.sh  stop.bat  stop.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: market.py  onchain.py  sentiment.py  settings.py  (+1 more)
backend/app/cli/: main.py
backend/app/cli/commands/: analyze.py  market.py  onchain.py  sentiment.py
backend/app/core/indicators/: base.py  oscillator.py  trend.py  volatility.py  volume.py
backend/app/core/onchain/: exchange_flow.py  valuation.py
backend/app/core/sentiment/: fear_greed.py  funding.py  long_short_ratio.py  open_interest.py  taker_volume.py
backend/app/data/: aggregator.py  base.py  cache.py  db_cache.py
backend/app/data/providers/: alternative.py  binance_derivatives.py  binance_funding.py  binance_pair_resolver.py  blockchain.py  ccxt_provider.py  coingecko.py  coinglass.py  glassnode.py  multi_exchange_funding.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  api_cache.py  app_setting.py  price.py
backend/app/schemas/: market.py  onchain.py  sentiment.py  settings.py  technical.py
backend/app/services/: market_service.py  onchain_service.py  sentiment_service.py  settings_service.py  technical_service.py
backend/tests/: conftest.py
backend/tests/unit/test_indicators/: test_oscillator.py  test_trend.py  test_volatility.py  test_volume.py
backend/tests/unit/test_sentiment/: test_long_short_ratio.py  test_open_interest.py  test_taker_volume.py
(+77 files in other folders)
