[project]
name = "coinsight"
version = "0.1.0"
description = "加密貨幣技術分析與市場洞察工具"
requires-python = ">=3.9"
dependencies = [
    # Web 框架
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # 數據獲取
    "ccxt>=4.4",
    "httpx>=0.28",
    # 數據處理與技術指標
    "pandas>=2.2",
    "numpy>=2.0",
    "ta>=0.11.0",
    # 資料庫
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    # CLI
    "typer[all]>=0.15",
    "rich>=13.9",
    # 設定
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
coinsight = "app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
